grafana/grafana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
   - http:
       paths:
       - path: /grafana/(.*)
         backend:
          serviceName: grafana
          servicePort: 3000
